--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ultimate-shop",
+  "name": "shop-term",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,10 +36,14 @@
       "last 1 safari version"
     ]
   },
+  "main": "index.js",
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "file-loader": "^6.2.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
